# config_files

./: .Brewfile  .Xresources  .bash_aliases  .bashrc  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .profile  .tmux.conf  .vimrc  .zprofile  .zshrc  Brewfile  README.md  setup.bash
.Xresources.d/: arc-dark.xcolors  rofi  urxvt
.bashrc.d/: aliases.bash  asdf.bash  bash.bash  gcp.bash  git.bash  i3.bash  keyboard.bash  mujoco.bash  navigation.bash  pipenv.bash  ranger.bash  terminal_prompt.bash  var.bash  venv.bash  vi_mode.bash  vim.bash  working_directory.bash
.bashrc.d/configs/: anaconda.bash  casadi.bash  ros2.bash  yarn.bash
.bashrc.d/inactive/: acado.bash  ros.bash
.bashrc.d/lib/: .gitignore  antigravity.bash  artifactory.bash  asdf.bash  autosuggestions.bash  aws.bash  bastion-tunnel.bash  brew.bash  bun.bash  cassh.bash  cat.bash  cd.bash  custom_terminal_prompt.bash  direnv.bash  docker.bash  dvc.bash  ec2sync.bash  editor.bash  fzf.bash  gcloud.bash  git.bash  github.bash  google_cloud.bash  google_cloud_storage.bash  i3.bash  invoke.bash  kill_port.bash  lbc.bash  lfs.bash  ls.bash  markdown_preview.bash  mysql.bash  note.bash  npm.bash  pager.bash  pulumi.bash  python.bash  ranger.bash  replace.bash  spark.bash  (+11 more)
.claude/: CLAUDE.md  settings.json
.config/: mimeapps.list
.config/aerospace/: aerospace.toml
.config/borders/: bordersrc
.config/compton/: my_compton.conf
.config/nvim/lua/snippets/ros/cmake/: CMakeLists.txt  cmake_acado.txt  cmake_library.txt
.config/nvim/snippets/ros/package/: package.xml  package_msg.xml
.fonts/: .uuid
.i3/: calendar.sh  config  hello_world.py  i3pystatus.py  i3pystatus.py~  i3status.conf  screen_script.sh  settings.py
.packages/: apt_pkgs.txt
.scripts/: initial_config.bash  startup_apps.bash  tray.bash
.tmuxinator/: dji_mpc_hokuyo.yml  laser_perception.yml  laser_perception_vrep.yml
.vim/: .vimrc
dl_course/: README.md
(+181 files in other folders)
