<?xml version="1.0"?>
<package format="2">
  <name>your_project_name</name>
  <version>0.0.0</version>
  <description>The gios package</description>

  <maintainer email="manuel.castillo@uni.lu">manu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>rosunit</test_depend>
  <export>

  </export>
</package>
